2004-10-11  Florian Boor  <florian.boor@kernelconcepts.de>

    * list-ui.c, todo-ui.c, todo.h: Added parameter for parent window to 
                                    edit_item()
    * todo-ui.c (edit_item): Changed window to become modal. Removed shadow
                             from viewport.


2004-09-22  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.49 released.

2004-09-21  Phil Blundell  <pb@nexus.co.uk>

	* list-ui.c (categories_menu): Apply patch from Chris Owen to
	correctly refresh main window if currently-showing category was
	deleted.  [Bug #1253]

2004-09-21  Florian Boor  <florian.boor@kernelconcepts.de>

    * list-ui.c (delete_completed_items): Changed type of dialog from 
                                          "error" to "question".
    * list-ui.c (sort_more_complex): New function providing improved sorting.

2004-09-15  Florian Boor  <florian.boor@kernelconcepts.de>

    * list-ui.c: Added patch by Chris Owen to add button for removing 
                 completed items.

2004-09-10  Florian Boor <florian@kernelconcepts.de>

	* list-ui.c (top_level): Removed hardcoded setting of toolbar style.
	* main.c: Added loading of new pixmaps.
	* list-ui.c (top_level): Added two additional colums (priority, date).
	* list-ui.c (toggle_completed): likewise
    * dot-box.png, bar-box.png: New files.
    
2004-08-28  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.48 released.

2004-08-22  Phil Blundell  <pb@nexus.co.uk>

	* list-ui.c (sort_by_priority): Swap sense of comparison.
	(refresh_items): Add missing assignment of g_slist_sort return
	value.

2004-06-23  Philip Blundell  <philb@gnu.org>

	* Version 0.47 released.

2004-06-23  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add nl, ru, sr, sk, sv, wa, es.

2004-03-25  Philip Blundell  <philb@gnu.org>

	* Makefile: Version 0.46 released.

2004-03-08  Philip Blundell  <philb@gnu.org>

	* Makefile (PACKAGE_CPPFLAGS, PACKAGE_CFLAGS, PACKAGE_LDFLAGS):