@@ -1,3 +1,7 @@
+2004-11-18  Florian Boor  <florian.boor@kernelconcepts.de>
+
+    * todo-ui.c: Fixed category dialog.
+
 2004-10-11  Florian Boor  <florian.boor@kernelconcepts.de>
 
     * list-ui.c, todo-ui.c, todo.h: Added parameter for parent window to 
